--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 <header class="site-header" id="header">
     <nav class="navbar navbar-expand-lg transparent-bg static-nav">
         <div class="container">
-            <a class="navbar-brand" href="index.html">
-                <img src="media/Live Scan Main Logo White.jpg" alt="logo" class="logo-default">
-                <img src="media/Live Scan Main Logo White.jpg" alt="logo" class="logo-scrolled">
+            <a class="navbar-brand" style="width: 200px !important;" href="index.html">
+                <img src="media/LiveScanWSLogoWhite.png" alt="logo" class="logo-default">
+                <img src="media/LiveScanWSLogoWhite.png" alt="logo" class="logo-scrolled">
             </a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ms-auto">
