--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="container">
             <a class="navbar-brand" style="width: 200px !important;" href="index.html">
                 <img src="media/LiveScanWSLogoWhite.png" alt="logo" class="logo-default">
-                <img src="media/LiveScanWSLogoWhite.png" alt="logo" class="logo-scrolled">
+                <img src="media/Live Scan Main Logo.png" alt="logo" class="logo-scrolled">
             </a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav ms-auto">
@@ -243,120 +243,6 @@
     </div>
 </section>
 <!--WOrk Process ends-->
-<!-- Mobile Apps -->
-<section id="our-apps" class="padding">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-lg-6 col-md-7 col-sm-12">
-                <div class="heading-title bottom30 wow fadeInUp" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
-                    <span class="defaultcolor text-center text-md-start">Quisque tellus risus, adipisci viverra</span>
-                    <h2 class="darkcolor font-normal text-center text-md-start">Mobile App Designs</h2>
-                </div>
-            </div>
-            <div class="col-lg-6 col-md-5 col-sm-12">
-                <p class="text-center text-md-start">Curabitur mollis bibendum luctus. Duis suscipit vitae dui sed suscipit. Vestibulum auctor nunc vitae diam eleifend, in maximus metus sollicitudin. Quisque vitae sodales lectus. </p>
-            </div>
-        </div>
-        <div class="row d-flex align-items-center" id="app-feature">
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <div class="text-center text-md-end">
-                    <div class="feature-item mt-3 wow fadeInLeft" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInLeft;">
-                        <div class="icon"><i class="fas fa-cog"></i></div>
-                        <div class="text">
-                            <h3 class="bottom15">
-                                <span class="d-inline-block">Theme Options</span>
-                            </h3>
-                            <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet</p>
-                        </div>
-                    </div>
-                    <div class="feature-item mt-5 wow fadeInLeft" data-wow-delay="350ms" style="visibility: visible; animation-delay: 350ms; animation-name: fadeInLeft;">
-                        <div class="icon"><i class="fas fa-edit"></i></div>
-                        <div class="text">
-                            <h3 class="bottom15">
-                                <span class="d-inline-block">Customization</span>
-                            </h3>
-                            <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 text-center">
-                <div class="app-image top30">
-                    <div class="app-slider-lock-btn"></div>
-                    <div class="app-slider-lock">
-                        <img src="images/iphone-slide-lock.jpg" alt="">
-                    </div>
-                    <div id="app-slider" class="owl-carousel owl-theme owl-loaded owl-drag">
-
-
-
-                        <div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(-470px, 0px, 0px); transition: all 0s ease 0s; width: 1645px;"><div class="owl-item cloned" style="width: 235px;"><div class="item">
-                            <img src="images/iphone-slide2.jpg" alt="">
-                        </div></div><div class="owl-item cloned" style="width: 235px;"><div class="item">
-                            <img src="images/iphone-slide3.jpg" alt="">
-                        </div></div><div class="owl-item active" style="width: 235px;"><div class="item">
-                            <img src="images/iphone-slide1.jpg" alt="">
-                        </div></div><div class="owl-item" style="width: 235px;"><div class="item">
-                            <img src="images/iphone-slide2.jpg" alt="">
-                        </div></div><div class="owl-item" style="width: 235px;"><div class="item">
-                            <img src="images/iphone-slide3.jpg" alt="">
-                        </div></div><div class="owl-item cloned" style="width: 235px;"><div class="item">
-                            <img src="images/iphone-slide1.jpg" alt="">
-                        </div></div><div class="owl-item cloned" style="width: 235px;"><div class="item">
-                            <img src="images/iphone-slide2.jpg" alt="">
-                        </div></div></div></div><div class="owl-nav disabled"><button type="button" role="presentation" class="owl-prev"><span aria-label="Previous">‹</span></button><button type="button" role="presentation" class="owl-next"><span aria-label="Next">›</span></button></div><div class="owl-dots disabled"></div></div>
-                    <img src="images/iphone.png" alt="image">
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <div class="text-center text-md-start">
-                    <div class="feature-item mt-3 wow fadeInRight" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInRight;">
-                        <div class="icon"><i class="fas fa-code"></i></div>
-                        <div class="text">
-                            <h3 class="bottom15">
-                                <span class="d-inline-block">Powerful Code</span>
-                            </h3>
-                            <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet</p>
-                        </div>
-                    </div>
-                    <div class="feature-item mt-5 wow fadeInRight" data-wow-delay="350ms" style="visibility: visible; animation-delay: 350ms; animation-name: fadeInRight;">
-                        <div class="icon"><i class="far fa-folder-open"></i></div>
-                        <div class="text">
-                            <h3 class="bottom15">
-                                <span class="d-inline-block">Documentation </span>
-                            </h3>
-                            <p>This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!--Mobile Apps ends-->
-<!-- Counters -->
-<section id="bg-counters" class="padding bg-counters parallax">
-    <div class="container">
-        <div class="row align-items-center text-center">
-            <div class="col-lg-4 col-md-4 col-sm-4 bottom10">
-                <div class="counters whitecolor  top10 bottom10">
-                    <span class="count_nums font-light" data-to="2010" data-speed="2500"> </span>
-                </div>
-                <h3 class="font-light whitecolor top20">Since We Started</h3>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-4">
-                <p class="whitecolor top20 bottom20 font-light title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc mauris arcu, lobortis id interdum vitae, interdum eget elit. </p>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-4 bottom10">
-                <div class="counters whitecolor top10 bottom10">
-                    <span class="count_nums font-light" data-to="895" data-speed="2500"> </span>
-                </div>
-                <h3 class="font-light whitecolor top20">Since We Started</h3>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- Counters ends-->
 <!--Pricing Start-->
 <section id="pricing" class="padding bglight">
     <div class="container">
@@ -448,7 +334,7 @@
 </section>
 <!--Pricing ends-->
 <!-- Partners-->
-<section id="our-partners" class="padding bglight">
+<section id="our-partners" class="padding bglight" style="display: none !important;">
     <div class="container">
         <div class="row">
             <h2 class="d-none">Partners Carousel</h2>
@@ -491,7 +377,7 @@
 </section>
 <!-- Partners ends-->
 <!-- Testimonials -->
-<section id="our-testimonial" class="bglight padding_bottom">
+<section id="our-testimonial" class="bglight padding_bottom" style="display: none !important;">
     <div class="parallax page-header testimonial-bg">
         <div class="container">
             <div class="row">
@@ -691,56 +577,13 @@
     </div>
 </section>
 <!--contact us end-->
-<!-- Stay connected US -->
-<section id="stayconnect" class="bglight position-relative">
-    <div class="container">
-        <div class="contactus-wrapp">
-            <div class="row">
-                <div class="col-md-12 col-sm-12">
-                    <div class="heading-title wow fadeInUp text-center text-md-start" data-wow-delay="300ms">
-                        <h3 class="darkcolor bottom20">Stay Connected</h3>
-                    </div>
-                </div>
-                <div class="col-md-12 col-sm-12">
-                    <form class="getin_form wow fadeInUp" data-wow-delay="400ms" onsubmit="return false;">
-                        <div class="row">
-                            <div class="col-md-12 col-sm-12" id="result"></div>
-                            <div class="col-md-3 col-sm-6">
-                                <div class="form-group">
-                                    <label for="userName" class="d-none"></label>
-                                    <input class="form-control" type="text" placeholder="First Name:" required id="userName" name="userName">
-                                </div>
-                            </div>
-                            <div class="col-md-3 col-sm-6">
-                                <div class="form-group">
-                                    <label for="companyName" class="d-none"></label>
-                                    <input class="form-control" type="tel" placeholder="Company Name"  id="companyName" name="companyName">
-                                </div>
-                            </div>
-                            <div class="col-md-3 col-sm-6">
-                                <div class="form-group">
-                                    <label for="email" class="d-none"></label>
-                                    <input class="form-control" type="email" placeholder="Email:" required id="email" name="email">
-                                </div>
-                            </div>
-                            <div class="col-md-3 col-sm-6">
-                                <button type="submit" class="button gradient-btn w-100" id="submit_btn">subscribe</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- Contact US ends -->
 <!--Site Footer Here-->
 <footer id="site-footer" class=" bgdark padding_top">
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-md-6 col-sm-6">
                 <div class="footer_panel padding_bottom_half bottom20">
-                    <a href="index.html" class="footer_logo bottom25"><img src="images/logo-transparent.png" alt="MegaOne"></a>
+                    <a href="index.html" class="footer_logo bottom25"><img src="media/LiveScanWSLogoWhite.png" alt="MegaOne"></a>
                     <p class="whitecolor bottom25">Keep away from people who try to belittle your ambitions Small people always do that but the really great Friendly.</p>
                     <div class="d-table w-100 address-item whitecolor bottom25">
                         <span class="d-table-cell align-middle"><i class="fas fa-mobile-alt"></i></span>
