--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 </section>
 <!--Main Slider ends -->
 <!--Some Feature -->
-<section id="our-feature" class="single-feature padding">
+<section id="services" class="single-feature padding">
     <div class="container">
         <div class="row d-flex align-items-center">
             <div class="col-lg-6 col-md-7 col-sm-7 text-sm-start text-center wow fadeInLeft" data-wow-delay="300ms">
