--- a/index.html
+++ b/index.html
@@ -428,14 +428,14 @@
                 <div class="col-md-6 col-sm-6 order-sm-2 text-center text-md-start">
                     <div class="contact-meta px-2">
                         <div class="heading-title">
-                            <span class="defaultcolor mb-3">Trax Agency Worldwide</span>
-                            <h2 class="darkcolor font-normal mb-4"><span class="d-none d-md-inline-block">Our</span> Agency Office <span class="d-none d-md-inline-block">In London</span></h2>
+                            <span class="defaultcolor mb-3">Live Scan World Services</span>
+                            <!-- <h2 class="darkcolor font-normal mb-4"><span class="d-none d-md-inline-block">Our</span> Agency Office <span class="d-none d-md-inline-block">In London</span></h2> -->
                         </div>
-                        <p class="bottom10">Address: 309, New Cavendish St, EC1Y 3WK</p>
-                        <p class="bottom10">0800 214 5252</p>
-                        <p class="bottom10"><a href="mailto:polpo@traxagency.co.au">polpo@traxagency.co.au</a></p>
+                        <p class="bottom10">Address: 1234 S Street Ave Los Angeles, CA 90011</p>
+                        <p class="bottom10">(323) 555 - 5555</p>
+                        <p class="bottom10"><a href="mailto:polpo@traxagency.co.au">contact@livescanworldservices.com</a></p>
                         <p class="bottom10">Mon-Fri: 9am-5pm</p>
-                        <ul class="social-icons mt-4 mb-4 mb-sm-0 wow fadeInUp" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
+                        <ul style="display: none;" class="social-icons mt-4 mb-4 mb-sm-0 wow fadeInUp" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
                             <li><a href="javascript:void(0)"><i class="fab fa-facebook-f"></i> </a> </li>
                             <li><a href="javascript:void(0)"><i class="fab fa-twitter"></i> </a> </li>
                             <li><a href="javascript:void(0)"><i class="fab fa-linkedin-in"></i> </a> </li>
