--- a/index.html
+++ b/index.html
@@ -98,28 +98,63 @@
 <!--Main Slider-->
 <section id="home">
     <h2 class="d-none">heading</h2>
-    <div class="forcefullwidth_wrapper_tp_banner" id="rev_one_page_forcefullwidth" style="position:relative;width:100%;height:auto;margin-top:0px;margin-bottom:0px"><div id="revo_main_wrapper" class="rev_slider_wrapper fullwidthbanner-container" style="margin-top: 0px; margin-bottom: 0px; position: absolute; max-height: none; overflow: visible; height: 934px; width: 2560px; left: 0px;">
-        <div id="rev_one_page" class="rev_slider fullwidthabanner revslider-initialised tp-simpleresponsive rev_redraw_on_blurfocus" style="max-height: none; margin-top: 0px; margin-bottom: 0px; height: 100%;" data-version="5.4.1" data-slideactive="rs-03">
-            <ul class="tp-revslider-mainul" style="visibility: visible; display: block; overflow: hidden; width: 100%; height: 100%; max-height: none;">
+    <div id="revo_main_wrapper" class="rev_slider_wrapper fullwidthbanner-container">
+        <div id="rev_one_page" class="rev_slider fullwidthabanner" style="display:none;" data-version="5.4.1">
+            <ul>
                 <!-- SLIDE 3  -->
-                <li data-index="rs-03" data-transition="fade" data-slotamount="default" data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="2000" data-fsmasterspeed="1500" class="banner-overlay tp-revslider-slidesli active-revslide" style="width: 100%; height: 100%; overflow: hidden; z-index: 20; visibility: inherit; opacity: 1; background-color: rgba(255, 255, 255, 0);">
+                <li data-index="rs-03" data-transition="fade" data-slotamount="default" data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="2000" data-fsmasterspeed="1500" class="banner-overlay" >
                     <!-- MAIN IMAGE -->
                     <div class="overlay overlay-dark opacity-6"></div>
-                    <div class="slotholder" style="position: absolute; top: 0px; left: 0px; z-index: 0; width: 100%; height: 100%; backface-visibility: hidden; transform: translate3d(0px, 0px, 0px); visibility: inherit; opacity: 1;"><!--Runtime Modification - Img tag is Still Available for SEO Goals in Source - <img src="media/fingerprint1.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg defaultimg" data-bgparallax="10" data-no-retina="">--><div class="tp-bgimg defaultimg " data-bgcolor="undefined" style="background-repeat: no-repeat; background-image: url(&quot;media/fingerprint1.jpg&quot;); background-size: cover; background-position: center center; width: 100%; height: 100%; opacity: 1; visibility: inherit; z-index: 20;" src="media/fingerprint1.jpg"></div></div>
+                    <img src="media/fingerprint1.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" class="rev-slidebg" data-bgparallax="10" data-no-retina>
                     <!-- LAYER NR. 3 -->
-                    <div class="tp-parallax-wrap" style="position: absolute; display: block; visibility: visible; left: 1142px; top: 356px; z-index: 8;"><div class="tp-loop-wrap" style="position:absolute;display:block;;"><div class="tp-mask-wrap" style="position: absolute; display: block; overflow: visible;"><div class="tp-caption tp-resizeme z-index-8 font-light2 whitecolor text-capitalize" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-100','-100','-140','-140']" data-fontsize="['48','48','46','45']" data-whitespace="nowrap" data-responsive_offset="on" data-width="['none','none','none','none']" data-type="text" data-textalign="['center','center','center','center']" data-transform_idle="o:1;" data-transform_in="x:-50px;opacity:0;s:2000;e:Power3.easeOut;" data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;" data-start="1000" data-splitin="none" data-splitout="none" id="layer-148323361" style="visibility: inherit; transition: none; text-align: center; line-height: 22px; border-width: 0px; margin: 0px; padding: 0px; letter-spacing: 0px; font-weight: 200; font-size: 48px; white-space: nowrap; min-height: 0px; min-width: 0px; max-height: none; max-width: none; opacity: 1; transform: translate3d(0px, 0px, 0px); transform-origin: 50% 50% 0px;">the ultimate
-                    </div></div></div></div>
-                    <div class="tp-parallax-wrap" style="position: absolute; display: block; visibility: visible; left: 1099px; top: 426px; z-index: 9;"><div class="tp-loop-wrap" style="position:absolute;display:block;;"><div class="tp-mask-wrap" style="position: absolute; display: block; overflow: visible;"><div class="tp-caption tp-resizeme z-index-9 font-bold whitecolor text-capitalize" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['-30','-30','-70','-70']" data-fontsize="['48','48','46','45']" data-whitespace="nowrap" data-responsive_offset="on" data-width="['none','none','none','none']" data-type="text" data-textalign="['center','center','center','center']" data-transform_idle="o:1;" data-transform_in="z:0;rX:0;rY:0;rZ:0;sX:0.9;sY:0.9;skX:0;skY:0;opacity:0;s:1500;e:Power3.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" data-start="1200" data-splitin="none" data-splitout="none" style="letter-spacing: 1px; visibility: inherit; transition: none; text-align: center; line-height: 22px; border-width: 0px; margin: 0px; padding: 0px; font-weight: 700; font-size: 48px; white-space: nowrap; min-height: 0px; min-width: 0px; max-height: none; max-width: none; opacity: 1; transform: translate3d(0px, 0px, 0px); transform-origin: 50% 50% 0px;" id="layer-922495881">next big thing
-                    </div></div></div></div>
-                    <div class="tp-parallax-wrap" style="position: absolute; display: block; visibility: visible; left: 1149px; top: 496px; z-index: 10;"><div class="tp-loop-wrap" style="position:absolute;display:block;;"><div class="tp-mask-wrap" style="position: absolute; display: block; overflow: visible;"><div class="tp-caption tp-resizeme z-index-10 font-xlight whitecolor text-capitalize" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['40','40','0','0']" data-fontsize="['48','48','46','45']" data-whitespace="nowrap" data-responsive_offset="on" data-width="['none','none','none','none']" data-type="text" data-textalign="['center','center','center','center']" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" data-transform_out="s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-start="1000" data-splitin="none" data-splitout="none" id="layer-298753989" style="visibility: inherit; transition: none; text-align: center; line-height: 22px; border-width: 0px; margin: 0px; padding: 0px; letter-spacing: 0px; font-weight: 100; font-size: 48px; white-space: nowrap; min-height: 0px; min-width: 0px; max-height: none; max-width: none; opacity: 1; transform: translate3d(0px, 0px, 0px); transform-origin: 50% 50% 0px;">in one page
-                    </div></div></div></div>
-                    <div class="tp-parallax-wrap" style="position: absolute; display: block; visibility: visible; left: 1205px; top: 566px; z-index: 1;"><div class="tp-loop-wrap" style="position:absolute;display:block;;"><div class="tp-mask-wrap" style="position: absolute; display: block; overflow: visible;"><div class="tp-caption" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['120','120','100','100']" data-textalign="['center','center','center','center']" data-whitespace="nowrap" data-type="button" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:1500;e:Power4.easeInOut;" data-transform_out="s:900;e:Power2.easeInOut;s:900;e:Power2.easeInOut;" data-start="2000" data-splitin="none" data-splitout="none" data-responsive_offset="on" id="layer-576082244" style="visibility: inherit; transition: none; text-align: center; line-height: 22px; border-width: 0px; margin: 0px; padding: 0px; letter-spacing: 0px; font-weight: 400; font-size: 15px; white-space: nowrap; min-height: 0px; min-width: 0px; max-height: none; max-width: none; opacity: 1; transform: translate3d(0px, 0px, 0px); transform-origin: 50% 50% 0px;">
+                    <div class="tp-caption tp-resizeme z-index-8 font-light2 whitecolor text-capitalize"
+                         data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+                         data-y="['middle','middle','middle','middle']" data-voffset="['-100','-100','-140','-140']"
+                         data-fontsize="['48','48','46','45']"
+                         data-whitespace="nowrap" data-responsive_offset="on"
+                         data-width="['none','none','none','none']" data-type="text"
+                         data-textalign="['center','center','center','center']"
+                         data-transform_idle="o:1;"
+                         data-transform_in="x:-50px;opacity:0;s:2000;e:Power3.easeOut;"
+                         data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"
+                         data-start="1000" data-splitin="none" data-splitout="none">the ultimate
+                    </div>
+                    <div class="tp-caption tp-resizeme z-index-9 font-bold whitecolor text-capitalize"
+                         data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+                         data-y="['middle','middle','middle','middle']" data-voffset="['-30','-30','-70','-70']"
+                         data-fontsize="['48','48','46','45']"
+                         data-whitespace="nowrap" data-responsive_offset="on"
+                         data-width="['none','none','none','none']" data-type="text"
+                         data-textalign="['center','center','center','center']"
+                         data-transform_idle="o:1;" data-transform_in="z:0;rX:0;rY:0;rZ:0;sX:0.9;sY:0.9;skX:0;skY:0;opacity:0;s:1500;e:Power3.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;"
+                         data-start="1200" data-splitin="none" data-splitout="none"
+                         style="letter-spacing: 1px;">next big thing
+                    </div>
+                    <div class="tp-caption tp-resizeme z-index-10 font-xlight whitecolor text-capitalize"
+                         data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+                         data-y="['middle','middle','middle','middle']" data-voffset="['40','40','0','0']"
+                         data-fontsize="['48','48','46','45']"
+                         data-whitespace="nowrap" data-responsive_offset="on"
+                         data-width="['none','none','none','none']" data-type="text"
+                         data-textalign="['center','center','center','center']"
+                         data-transform_idle="o:1;"
+                         data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;"
+                         data-transform_out="s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;"
+                         data-start="1000" data-splitin="none" data-splitout="none">in one page
+                    </div>
+                    <div class="tp-caption"
+                         data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+                         data-y="['middle','middle','middle','middle']" data-voffset="['120','120','100','100']"
+                         data-textalign="['center','center','center','center']"
+                         data-whitespace="nowrap" data-type="button" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:1500;e:Power4.easeInOut;"
+                         data-transform_out="s:900;e:Power2.easeInOut;s:900;e:Power2.easeInOut;"
+                         data-start="2000" data-splitin="none" data-splitout="none" data-responsive_offset="on">
                         <a href="javascript:void(0)" class="button btn-primary font-13">Get Started</a>
-                    </div></div></div></div>
+                    </div>
                 </li>
             </ul>
-        <div class="tp-loader off" style="display: none;"><div class="dot1"></div><div class="dot2"></div><div class="bounce1"></div><div class="bounce2"></div><div class="bounce3"></div></div><div class="tp-bannertimer" style="visibility: hidden; width: 0%;"></div><div class="tp-bullets vertical nav-pos-hor-right nav-pos-ver-center nav-dir-vertical" style="height: 15px; width: 15px; top: 50%; transform: matrix(1, 0, 0, 1, -55, -7); left: 100%;"><div class="tp-bullet selected" style="top: 0px; left: 0px;"></div></div></div>
-    </div><div class="tp-fullwidth-forcer" style="width: 100%; height: 934px;"></div></div>
+        </div>
+    </div>
 </section>
 <!--Main Slider ends -->
 <!--Some Feature -->
