--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                     </li> -->
                     <li class="nav-item">
                         <a class="nav-link pagescroll nav-bar-item" href="#services">Services</a>
+                    </li> 
+                    <li class="nav-item">
+                        <a class="nav-link pagescroll nav-bar-item" href="#pricing">Pricing</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link pagescroll nav-bar-item" href="#contact">Contact</a>
@@ -75,6 +78,9 @@
                     </li> -->
                     <li class="nav-item">
                         <a class="nav-link pagescroll nav-bar-item" href="#services">Services</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link pagescroll nav-bar-item" href="#pricing">Pricing</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link pagescroll nav-bar-item" href="#contact">Contact</a>
