--- a/index.html
+++ b/index.html
@@ -169,9 +169,16 @@
         <div class="row d-flex align-items-center">
             <div class="col-lg-6 col-md-7 col-sm-7 text-sm-start text-center wow fadeInLeft" data-wow-delay="300ms">
                 <div class="heading-title mb-4">
-                    <h2 class="darkcolor font-normal bottom30">Lets take your <span class="defaultcolor">Business</span> to Next Level</h2>
+                    <h2 class="darkcolor font-normal bottom30">Why <span class="defaultcolor">Live Scan</span> World Services</h2>
                 </div>
-                <p class="bottom35">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc mauris arcu, lobortis id interdum vitae, interdum eget elit. Curabitur quis urna nulla. Suspendisse potenti. Duis suscipit ultrices maximus. </p>
+                <p class="bottom35">Live Scan World Services, LLC, specializes in providing eƯicient, accurate and secure
+                    fingerprinting services to a diverse clientele. Background checks on a federal and state level
+                    are pivotal as various pieces of information can be revealed, including past criminal
+                    convictions, and in some instances, naturalization records and immigration violations, which
+                    are all factors that may impact an individual’s eligibility when it comes to applying for some
+                    sort of benefit. Using state-of-the-art technology and API, we oƯer rapid FBI R.A.P (Records of
+                    Arrest and Prosecutions) results directly to you after 72 hours of electronic fingerprint
+                    transmission.</p>
                 <a href="#our-team" class="button btnsecondary gradient-btn pagescroll mb-sm-0 mb-4">Learn More</a>
             </div>
             <div class="col-lg-5 offset-lg-1 col-md-5 col-sm-5 wow fadeInRight" data-wow-delay="300ms">
