--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                          data-whitespace="nowrap" data-type="button" data-transform_idle="o:1;" data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:1500;e:Power4.easeInOut;"
                          data-transform_out="s:900;e:Power2.easeInOut;s:900;e:Power2.easeInOut;"
                          data-start="2000" data-splitin="none" data-splitout="none" data-responsive_offset="on">
-                        <a href="javascript:void(0)" class="button btn-primary font-13">Get Started</a>
+                        <a style="display: none !important;" href="javascript:void(0)" class="button btn-primary font-13">Get Started</a>
                     </div>
                 </li>
             </ul>
@@ -167,7 +167,7 @@
 <section id="services" class="single-feature padding">
     <div class="container">
         <div class="row d-flex align-items-center">
-            <div class="col-lg-6 col-md-7 col-sm-7 text-sm-start text-center wow fadeInLeft" data-wow-delay="300ms">
+            <div class="text-sm-start text-center wow fadeInLeft" data-wow-delay="300ms" style="text-align: center !important;">
                 <div class="heading-title mb-4">
                     <h2 class="darkcolor font-normal bottom30">Why <span class="defaultcolor">Live Scan</span> World Services</h2>
                 </div>
@@ -179,9 +179,9 @@
                     sort of benefit. Using state-of-the-art technology and API, we oƯer rapid FBI R.A.P (Records of
                     Arrest and Prosecutions) results directly to you after 72 hours of electronic fingerprint
                     transmission.</p>
-                <a href="#our-team" class="button btnsecondary gradient-btn pagescroll mb-sm-0 mb-4">Learn More</a>
+                <a style="display: none !important;" href="#our-team" class="button btnsecondary gradient-btn pagescroll mb-sm-0 mb-4">Learn More</a>
             </div>
-            <div class="col-lg-5 offset-lg-1 col-md-5 col-sm-5 wow fadeInRight" data-wow-delay="300ms">
+            <div class="col-lg-5 offset-lg-1 col-md-5 col-sm-5 wow fadeInRight" data-wow-delay="300ms" style="display: none !important;">
                 <div class="image"><img alt="SEO" src="images/awesome-feature.png"></div>
             </div>
         </div>
@@ -256,7 +256,7 @@
                         <p class="bottom30">The standard version</p>
                         <div class="pricing-price darkcolor"><span class="pricing-currency">$75</span></div>
                         <ul class="pricing-list">
-                            <li>Support forum</li>
+                            <li>Mobile Services (add. fee)</li>
                         </ul>
                         <a class="button" href="javascript:void(0)" style="display:none;">Choose plan</a>
                     </div>
@@ -269,7 +269,7 @@
                         <p class="bottom30">The standard version</p>
                         <div class="pricing-price darkcolor"><span class="pricing-currency">$75</span></div>
                         <ul class="pricing-list">
-                            <li>Support forum</li>
+                            <li>Mobile Services  (add. fee)</li>
                         </ul>
                         <a class="button" href="javascript:void(0)" style="display:none;">Choose plan</a>
                     </div>
@@ -281,8 +281,8 @@
                         <h3 class="font-light darkcolor">FD-258</h3>
                         <p class="bottom30">Fingerprint Card</p>
                         <div class="pricing-price darkcolor"><span class="pricing-currency">$25</span></div>
-                        <ul class="pricing-list">
-                            <li>Support forum</li>
+                        <ul class="pricing-list">                            
+                            <li>Mobile Services (add. fee)</li>
                         </ul>
                         <a class="button" href="javascript:void(0)" style="display:none;">Choose plan</a>
                     </div>
@@ -457,20 +457,22 @@
                     <div class="heading-title bottom25 darkcolor wow fadeInUp" data-wow-delay="300ms">
                         <h2 class="font-normal darkcolor"> Contact Us </h2>
                     </div>
-                    <div class="col-md-8 offset-md-2 bottom35">
+                    <div class="col-md-8 offset-md-2 bottom35" style="display: none !important;">
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A dolores explicabo laudantium, omnis provident quam reiciendis voluptatum?</p>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-6 order-sm-2 text-center text-md-start">
+                <div class="text-center text-md-start" style="text-align: center !important;">
                     <div class="contact-meta px-2">
                         <div class="heading-title">
                             <span class="defaultcolor mb-3">Live Scan World Services</span>
                             <!-- <h2 class="darkcolor font-normal mb-4"><span class="d-none d-md-inline-block">Our</span> Agency Office <span class="d-none d-md-inline-block">In London</span></h2> -->
                         </div>
                         <p class="bottom10">Address: 1234 S Street Ave Los Angeles, CA 90011</p>
-                        <p class="bottom10">(323) 555 - 5555</p>
+                        <p class="bottom10">(213) 326 - 7364</p>
                         <p class="bottom10"><a href="mailto:polpo@traxagency.co.au">contact@livescanworldservices.com</a></p>
                         <p class="bottom10">Mon-Fri: 9am-5pm</p>
+                        <p class="bottom10">Sat: 7am-3pm</p>
+                        <p class="bottom10">Sun: 11am-3pm</p>
                         <ul style="display: none;" class="social-icons mt-4 mb-4 mb-sm-0 wow fadeInUp" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
                             <li><a href="javascript:void(0)"><i class="fab fa-facebook-f"></i> </a> </li>
                             <li><a href="javascript:void(0)"><i class="fab fa-twitter"></i> </a> </li>
@@ -481,7 +483,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-6">
+                <div class="col-md-6 col-sm-6" style="display: none !important;">
                     <div class="heading-title  wow fadeInUp" data-wow-delay="300ms" style="visibility: visible; animation-delay: 300ms; animation-name: fadeInUp;">
                         <form class="getin_form wow fadeInUp" data-wow-delay="400ms" onsubmit="return false;" style="visibility: visible; animation-delay: 400ms; animation-name: fadeInUp;">
                             <div class="row px-2">
@@ -513,7 +515,7 @@
                 </div>
             </div>
         </div>
-        <div class="row">
+        <div class="row" style="display: none !important;">
             <div class="col-lg-3 col-md-3">
                 <div class="widget text-center top60 w-100">
                     <div class="contact-box">
@@ -555,7 +557,7 @@
 <!--contact us end-->
 <!--Site Footer Here-->
 <footer id="site-footer" class=" bgdark padding_top">
-    <div class="container">
+    <div class="container" style="display: none !important;">
         <div class="row">
             <div class="col-lg-3 col-md-6 col-sm-6">
                 <div class="footer_panel padding_bottom_half bottom20">
