--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                          data-transform_idle="o:1;"
                          data-transform_in="x:-50px;opacity:0;s:2000;e:Power3.easeOut;"
                          data-transform_out="s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"
-                         data-start="1000" data-splitin="none" data-splitout="none">the ultimate
+                         data-start="1000" data-splitin="none" data-splitout="none">One
                     </div>
                     <div class="tp-caption tp-resizeme z-index-9 font-bold whitecolor text-capitalize"
                          data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
@@ -134,7 +134,7 @@
                          data-textalign="['center','center','center','center']"
                          data-transform_idle="o:1;" data-transform_in="z:0;rX:0;rY:0;rZ:0;sX:0.9;sY:0.9;skX:0;skY:0;opacity:0;s:1500;e:Power3.easeInOut;" data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;"
                          data-start="1200" data-splitin="none" data-splitout="none"
-                         style="letter-spacing: 1px;">next big thing
+                         style="letter-spacing: 1px;">fingerprint
                     </div>
                     <div class="tp-caption tp-resizeme z-index-10 font-xlight whitecolor text-capitalize"
                          data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
@@ -146,7 +146,7 @@
                          data-transform_idle="o:1;"
                          data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;"
                          data-transform_out="s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;"
-                         data-start="1000" data-splitin="none" data-splitout="none">in one page
+                         data-start="1000" data-splitin="none" data-splitout="none">away
                     </div>
                     <div class="tp-caption"
                          data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
@@ -469,7 +469,7 @@
                         </div>
                         <p class="bottom10">Address: 1234 S Street Ave Los Angeles, CA 90011</p>
                         <p class="bottom10">(213) 326 - 7364</p>
-                        <p class="bottom10"><a href="mailto:polpo@traxagency.co.au">contact@livescanworldservices.com</a></p>
+                        <p class="bottom10"><a href="mailto:polpo@traxagency.co.au">livescanworldservices@outlook.com</a></p>
                         <p class="bottom10">Mon-Fri: 9am-5pm</p>
                         <p class="bottom10">Sat: 7am-3pm</p>
                         <p class="bottom10">Sun: 11am-3pm</p>
