--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 </section>
 <!--WOrk Process ends-->
 <!--Pricing Start-->
-<section id="pricing" class="padding bglight">
+<section id="pricing" class="padding bglight" style="padding-bottom: 0px!important;">
     <div class="container">
         <div class="row">
             <div class="col-md-12 col-sm-12 text-center">
@@ -449,7 +449,7 @@
 </section>
 <!--Testimonials Ends-->
 <!--contact us-->
-<section id="contact" class="bglight padding position-relative noshadow">
+<section id="contact" class="bglight padding position-relative noshadow" style="padding-top: 0px!important;">
     <div class="container whitebox">
         <div class="widget py-5">
             <div class="row">
