--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <div class="heading-title mb-4">
                     <h2 class="darkcolor font-normal bottom30">Why <span class="defaultcolor">Live Scan</span> World Services</h2>
                 </div>
-                <p class="bottom35">Live Scan World Services, LLC, specializes in providing eƯicient, accurate and secure
+                <p class="bottom35">Live Scan World Services, LLC, specializes in providing efficient, accurate and secure
                     fingerprinting services to a diverse clientele. Background checks on a federal and state level
                     are pivotal as various pieces of information can be revealed, including past criminal
                     convictions, and in some instances, naturalization records and immigration violations, which
