--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     are pivotal as various pieces of information can be revealed, including past criminal
                     convictions, and in some instances, naturalization records and immigration violations, which
                     are all factors that may impact an individual’s eligibility when it comes to applying for some
-                    sort of benefit. Using state-of-the-art technology and API, we oƯer rapid FBI R.A.P (Records of
+                    sort of benefit. Using state-of-the-art technology and API, we offer rapid FBI R.A.P (Records of
                     Arrest and Prosecutions) results directly to you after 72 hours of electronic fingerprint
                     transmission.</p>
                 <a style="display: none !important;" href="#our-team" class="button btnsecondary gradient-btn pagescroll mb-sm-0 mb-4">Learn More</a>
