--- a/index.html
+++ b/index.html
@@ -467,8 +467,8 @@
                             <span class="defaultcolor mb-3">Live Scan World Services</span>
                             <!-- <h2 class="darkcolor font-normal mb-4"><span class="d-none d-md-inline-block">Our</span> Agency Office <span class="d-none d-md-inline-block">In London</span></h2> -->
                         </div>
-                        <p class="bottom10">Address: 1234 S Street Ave Los Angeles, CA 90011</p>
-                        <p class="bottom10">(213) 326 - 7364</p>
+                        <p class="bottom10" style="display: none !important;">Address: 1234 S Street Ave Los Angeles, CA 90011</p>
+                        <p class="bottom10">(213) 773 - 2169</p>
                         <p class="bottom10"><a href="mailto:polpo@traxagency.co.au">livescanworldservices@outlook.com</a></p>
                         <p class="bottom10">Mon-Fri: 9am-5pm</p>
                         <p class="bottom10">Sat: 7am-3pm</p>
